# control_system

./: CMakeLists.txt  ROV.cpp  ROV.h  main.cpp  sugestie.txt
control-system-build/: CMakeCache.txt  Makefile  cmake_install.cmake
ct/core/: core.h  templateDir.h
optcon/: optcon.h
